kubernetes/apps/infrastructure/istio/resources/cilium-allow-health-probes.yaml
---
# Allow Istio Ambient SNAT-ed kubelet health probes for media namespace
# Istio rewrites kubelet health check traffic to come from 169.254.7.127
# This policy allows that traffic to reach pods in the media namespace
# See: https://github.com/istio/istio/wiki/Troubleshooting-Istio-Ambient
# See: https://github.com/istio/istio/issues/49277
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-istio-health-probes
  namespace: media
spec:
  description: "Allow Istio Ambient SNAT-ed kubelet health probes from 169.254.7.127/32"
  endpointSelector: {}
  ingress:
    - fromCIDR:
        - 169.254.7.127/32
